<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Device Settings -->
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>

    <!-- Display -->
    <string name="display_title">Display</string>
    <string name="hbm_mode_summary"></string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="auto_hbm_summary"></string>
    <string name="auto_hbm_title">Automatic high brightness mode</string>
    <string name="hbm_mode_warning">Long-term usage of high brightness mode may damage your display</string>
    <string name="auto_hbm_threshold_title">Ambient light threshold to engage HBM (in lux)</string>
    <string name="auto_hbm_threshold_summary"></string>
    <string name="dc_mode_summary">Lower brightness via dimlayer instead of PWM duty cycle</string>
    <string name="dc_mode_title">DC Dimming</string>
    <string name="tile_hbm_mode">High brightness mode</string>
    <string name="tile_dc_mode">DC Dimming</string>

    <!-- Notification slider -->
    <string name="notification_slider_category_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_silent">Silent</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_none">Normal</string>
    <string name="buttons_dashboard_summary">Alert Slider Settings</string>

    <!-- Refresh rate -->
    <string name="fps_title">Measured FPS</string>
    <string name="fps_info_title">FPS overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>

    <!-- Slider toasts -->
    <string name="slider_toast_normal">Calls and notifications will ring</string>
    <string name="slider_toast_vibrate">Calls and notifications will vibrate</string>
    <string name="slider_toast_dnd">DND - No interruptions</string>
    <string name="slider_toast_priority">DND - Priority only</string>
    <string name="slider_toast_silent">Calls and notifications will be muted</string>
    
    <!-- Vibration control -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Strength of the vibration motor</string>
    <string name="vib_call_strength_title_head">Call Strength</string>
    <string name="vib_call_strength_summary_head">Strength of the vibration motor during incoming calls</string>
    <string name="vib_notif_strength_title_head">Notification Strength</string>
    <string name="vib_notif_strength_summary_head">Strength of the vibration motor during notifications</string>
    <string name="vibration_warning">Setting strength too high may cause permanent hardware damage</string>
</resources>
